// Copyright 2023 Intrinsic Innovation LLC
// Intrinsic Proprietary and Confidential
// Provided subject to written agreement between the parties.

syntax = "proto3";

package intrinsic_proto.test;

message TopLevel {
  enum Colors {
    UNKNOWN = 0;
    RED = 1;
    GREEN = 2;
    BLUE = 3;
  }

  message MiddleLevel {
    enum Shapes {
      UNKNOWN = 0;
      CIRCLE = 1;
      SQUARE = 2;
    }
    message BottomA {
      int32 value = 1;
    }
    message BottomB {
      int32 value = 1;
    }

    BottomA a = 1;
    BottomB b = 2;
  }

  string value = 1;
  MiddleLevel.Shapes shape = 2;
  MiddleLevel middle = 3;
}
